assets/src/styles/blocks/core-overrides/Image.scss
.wp-block-image {
  position: relative;
  width: auto;
  max-width: 100%;
  margin-top: $space-xs;
  margin-bottom: $space-md;

  &:not(.force-no-lightbox) {
    cursor: pointer;
  }

  @include large-and-up {
    margin-top: $space-md;
    margin-bottom: $space-lg;
  }

  figure {
    position: relative;
  }

  .alignleft {
    margin: 0 $n10 $n10 0;
    padding-top: 6px;
  }

  .alignright {
    margin: 0 0 $n10 $n10;
    padding-top: 6px;
  }

  @include medium-and-up {
    .image-credit {
      position: absolute;
      text-align: right;
      right: 10px;
      width: 100%;
      color: $white;
      z-index: 2;
    }
  }

  img {
    height: auto;
  }

  figcaption {
    font-size: $font-size-xxs;
    font-family: $roboto;
    line-height: 1.4;
    margin-bottom: 0;
  }

  &.caption-style-medium, &.caption-style-blue-overlay {
    figcaption {
      color: $grey-60;
    }
  }
}

figcaption {
  .caption-alignment-left & {
    text-align: left;
  }

  .caption-alignment-center & {
    text-align: center;
  }

  .caption-alignment-right & {
    text-align: right;
  }
}

figure.wp-block-image {
  display: inline-block;
}

